Added a non httponly cookie